# PlantOntology

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  GETTING_STARTED.md  README.md  nixpacks.toml  pyproject.toml  railway.json
api/: main.py
api/routers/: recommend.py  species.py  supplementary.py
data/: standard_drawings_index.json
data/nurseries/: nursery_farms.json
data/regulations/: material_prices_2026.json
data/species/: african_australian_plants.json  alpine_rock_garden.json  bamboo_climbing_plants.json  bulb_plants.json  climate_indicators_2024.json  climate_indicators_matched.json  conifers_world.json  desert_xeriscape_plants.json  east_asian_garden.json  edible_landscape_plants.json  european_mediterranean.json  ferns_mosses_world.json  fragrant_plants.json  fruit_trees.json  gbif_tree_minimal_batch_001.json  gbif_tree_minimal_batch_002.json  gbif_tree_minimal_batch_003.json  gbif_tree_minimal_batch_004.json  gbif_tree_minimal_batch_005.json  ground_covers.json  hedging_screening_shrubs.json  herbs_medicinal.json  japanese_garden_plants.json  korean_native_extended.json  korean_native_shrubs.json  korean_native_trees.json  korean_vines_alpine_coastal.json  korean_wildflowers.json  middle_eastern_plants.json  miscellaneous_world_plants.json  native_grasses_sedges.json  north_american_natives.json  ornamental_grasses.json  ornamental_popular.json  ornamental_trees_world.json  perennials_world.json  (+11 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
mcp/: server.py
ontology/: schema.cypher
scripts/: enrich_nurseries.py  parse_landscape_tree_farms_pdf.py  seed_neo4j.py
(+17 files in other folders)
